--- a/pethealthcaresystem-frontend/src/App.css
+++ b/pethealthcaresystem-frontend/src/App.css
@@ -82,7 +82,7 @@
   width: calc(100% - 120px); /* Adjust width to avoid overflow */
   margin-left: 120px; /* Accounts for the sidebar width */
   box-sizing: border-box;
-  overflow-y: auto; /* Allows the content to scroll */
+  overflow-y: auto; 
   height: calc(100vh - 60px); /* Makes the content take full viewport height minus navbar */
   background-color: #f1f1f1;
 }
@@ -91,7 +91,7 @@
   margin-left: 0; /* Remove the margin when sidenav is hidden */
   width: 100%; /* Adjust width to full when sidenav is hidden */
   padding-top: 20px; /* Adjust padding for the content */
-  height: 100%;
+  height: 100%; 
 }
 
 
