--- a/pethealthcaresystem-frontend/src/services/login.css
+++ b/pethealthcaresystem-frontend/src/services/login.css
@@ -1,13 +1,39 @@
-.bg-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin-top: 80px;
-    display: flex;
-    justify-content: center;
+.login {
+  /* position: fixed; */
+  /* width: 100%; */
+  /* background-attachment: fixed; */
+  /* background-image: url('https://hoanghamobile.com/tin-tuc/wp-content/uploads/2024/03/anh-meo-14.jpg'); */
+  /* display: flex; */
+  /* justify-content: center;
+  margin: 0;
+  overflow-x: hidden;
+  overflow: hidden; */
+  background-color: transparent;
+  color: white;
+  backdrop-filter: blur(30px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-
-.box-left,
+#floatingInputLogin {
+  background-color: transparent;
+  color: whitesmoke;
+}
+.gg-login {
+  border: solid 1px;
+  border-radius: 500px;
+  transition: box-shadow 0.3s ease;
+}
+.gg-login:hover {
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+.btn-login {
+  transition: box-shadow 0.3s ease;
+}
+.btn-login:hover {
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+#label-input {
+}
+/* .box-left,
 .box-right {
     width: 50%;
 }
@@ -33,27 +59,26 @@
 .box-left {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-}
+    /* align-items: center; 
+}*/
 
-.box-left img {
+/* .box-left img {
     margin: 0px 5px;
     width: 150px;
     animation: animation 3s infinite linear;
-}
+}  */
 
-.box-left img:nth-child(1) {
+/* .box-left img:nth-child(1) {
     animation-delay: 0.5s;
-    /* margin-right: 0px; */
-}
+    /* margin-right: 0px; 
+}*/
 
-.box-left img:nth-child(2) {
+/* .box-left img:nth-child(2) {
 
     animation-delay: 1s;
-}
+}  */
 
-
-@keyframes animation {
+/* @keyframes animation {
     0% {
         transform: translateY(0px);
     }
@@ -144,9 +169,9 @@
 
 .pass {
     text-align: center;
-}
+} */
 
-.pass a {
+/* .pass a {
     text-decoration: none;
     color: black;
     margin-right: auto;
@@ -166,9 +191,9 @@
 
 .or {
     text-align: center;
-}
+} */
 
-.google img {
+/* .google img {
     width: 25px;
 }
 
@@ -184,18 +209,21 @@
     height: 100%;
     overflow: hidden;
     position: relative;
-}
+} */
 
-#myVideo {
+/* #myVideo {
     position: absolute;
     right: 0;
     top: 0;
     min-width: 100%;
     min-height: 100%;
-}
+} */
 
-.error {
+/* .error {
     text-align: center;
     color: red;
     margin-bottom: 0px;
+} */
+::-webkit-scrollbar {
+  display: none;
 }
